# aiteam

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agents_core/: __init__.py  agile_coach.py  base.py  dynamic_expert.py  llm.py  product_owner.py
aiteam/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/: __init__.py
apps/api/: __init__.py  serializers.py  urls.py  views.py
apps/chat/: __init__.py  apps.py  consumers.py  routing.py  urls.py  views.py
docs/: conf.py  index.md
docs/arc42/: arc42.md
memory/: __init__.py  long_term.py  schemas.py  short_term.py
orchestrator/: __init__.py  tasks.py
templates/chat/: index.html
tests/: conftest.py  test_agents_smoke.py  test_api_edgecases.py  test_api_experts.py  test_api_features.py  test_api_memory.py  test_chat_ws.py  test_coverage_boosters.py  test_experts_cross_domain.py  test_health.py
tools/: __init__.py  search.py  web.py
